Drop width and length instance parameters